# bio

./: .gitignore  README.md
infrastruture/: docker-compose.yml
src/laboratory_service/: Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py
src/laboratory_service/adapters/: pubsub.py  redis.py
src/laboratory_service/core/interfaces/: database.py  publisher.py
src/laboratory_service/core/services/: database.py  publisher.py
src/laboratory_service/tests/: test_main.py
src/patient_service/: Dockerfile  database.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py
src/patient_service/adapters/: pubsub.py  redis.py
src/patient_service/core/interfaces/: database.py
src/patient_service/core/services/: database.py  subscriber.py
src/patient_service/tests/: test_main.py
